文件归类基本结束，开始更改功能